--- a/notificador/settings.ini
+++ b/notificador/settings.ini
@@ -1,3 +1,3 @@
 [TELEGRAM]
-TOKEN = <TELEGRAM_TOKEN>
-CHAT_ID = <TELEGRAM_CHAT_ID>
+TOKEN = 8150671432:AAEiDNqwqmZSbcw6EtodUvYYq00wYBZQqRQ
+CHAT_ID = 7977838915
