Cambiar chat del bot

--- a/notificador/settings.ini
+++ b/notificador/settings.ini
@@ -1,3 +1,3 @@
 [TELEGRAM]
-TOKEN = 8150671432:AAEiDNqwqmZSbcw6EtodUvYYq00wYBZQqRQ
-CHAT_ID = 7977838915
+TOKEN = 7917955216:AAE2ySfA3772Hv-hz582FgMjG4Ij2mZLqWM
+CHAT_ID = -4918446164
